BUG#25729 - boolean full text search is confused by NULLs produced by             LEFT JOIN Fixed that in certain situations MATCH ... AGAINST returns false hits for NULLs produced by LEFT JOIN when there is no fulltext index available.